--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,15 +24,20 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  flutter_bloc: ^6.0.5
+  freezed_annotation:
+  image_picker: ^0.6.7+11
+  tflite_flutter: ^0.5.0
+  image: ^2.1.12
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner:
+  freezed:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -47,6 +52,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/models/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
