--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_tflite_style_transfer
+name: tflitestyletransfer
 description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
@@ -24,20 +24,23 @@ dependencies:
   flutter:
     sdk: flutter
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.0
   flutter_bloc: ^6.0.5
   freezed_annotation:
-  image_picker: ^0.6.7+11
-  tflite_flutter: ^0.5.0
   image: ^2.1.12
+  multi_image_picker: ^4.7.14
+  tflite_flutter:
+    path: plugin/tflite_flutter_plugin
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner:
   freezed:
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
